# brightdata-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: artifacthub-publish.yaml  auto-tag.yaml  ci.yaml  release.yaml
examples/: docker-compose.override.yml  docker-compose.yml  grafana-dashboard-operations.json  grafana-dashboard.json  prometheus.yml
examples/grafana-provisioning/dashboards/: brightdata.yaml
examples/grafana-provisioning/datasources/: prometheus.yaml
examples/kubernetes/: deployment.yaml  servicemonitor.yaml
helm/: artifacthub-repo.yml
helm/brightdata-exporter/: Chart.yaml  README.md  values.schema.json  values.yaml
helm/brightdata-exporter/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
scripts/: sync-version.py
src/brightdata_exporter/: __init__.py  __main__.py  cache.py  client.py  collector.py  config.py  metrics.py  pricing.py  ratelimit.py  server.py  service.py
tests/: test_cache.py  test_client.py  test_collector.py  test_pricing.py  test_ratelimit.py  test_server.py  test_service.py
