[project]
name = "brightdata-exporter"
version = "0.2.8"
description = "Bright Data observability + FinOps service — Prometheus /metrics for alerting + REST /api/* for ad-hoc queries with caller-supplied date ranges."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Gines" }]
keywords = ["prometheus", "exporter", "brightdata", "proxy", "metrics", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.urls]
Homepage = "https://github.com/danielgines/brightdata-exporter"
Repository = "https://github.com/danielgines/brightdata-exporter"
Issues = "https://github.com/danielgines/brightdata-exporter/issues"

[project.scripts]
brightdata-exporter = "brightdata_exporter.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brightdata_exporter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
# server.py subclasses BaseHTTPRequestHandler whose dispatch convention
# requires `do_<METHOD>` (uppercase HTTP method) — Python's http.server
# only invokes handlers matching this exact name. Disabling N802 here.
"src/brightdata_exporter/server.py" = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
